--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Genert\\BBCode\\": "src/"
+            "Timr\\BBCode\\": "src/"
         }
     },
     "support": {
